# gdg.org.ua

./: .buildpacks  .codecov.yml  .coveragerc  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  .travis.yml  .vagga.settings.yaml  CONTRIBUTING.md  LICENSE.md  Makefile  Procfile  README.md  README.rst  Vagrantfile  app.json  bower.json  dev.txt  init.sh  init_production.sh  make.sh  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  tox.ini  vagga.yaml
.travis/: .vagga.yaml  deploy.sh  deploy_key.enc  deploy_key.pub  known_hosts
config/: alembic.ini
config/dev/: alembic.ini  app.yml  bundles.yml  logging.yml
config/prod/: app.yml  bundles.yml  logging.yml
config/test/: app.yml  bundles.yml  logging.yml
fixtures/: fixtures.yaml  loader.py
requirements/: common.txt  dev.txt  prod.txt  test-env.txt  test.txt
scripts/: mk-environ-file.sh
src/GDGUkraine/: __init__.py  api.py  auth_controller.py  blog_controller.py  controller.py  errors.py  events_controller.py  model.py  oauth.py  plugins.py  rest_controller.py  table_exporter.py  utils.py
src/GDGUkraine/fixtures/: loader.py
src/GDGUkraine/lib/forms/: __init__.py  registration_forms.py  util.py  widgets.py
src/GDGUkraine/lib/plugins/: __init__.py  oauth.py  urlmap.py
src/GDGUkraine/lib/testing/: __init__.py
src/GDGUkraine/lib/tools/: __init__.py  authorize.py
src/GDGUkraine/lib/utils/: __init__.py  gdrive.py  mail.py  signals.py  table_exporter.py  url.py  vcard.py
src/GDGUkraine/lib/validation/: __init__.py  field_validators.py  regform_schema.yml  schema.py
src/GDGUkraine/templates/: 404.html  base.html  card.html  confirmed.html  event.html  events.html  ga.html  gdg.org.ua_old.html  index.html  logo.html  og.html  participants.html  regclosed.html  register.html
src/GDGUkraine/templates/admin/events/: detail.html
src/GDGUkraine/templates/admin/participants/: list.html
src/GDGUkraine/templates/blog/: posts.html
src/GDGUkraine/templates/email/: card.html  confirmation.html
src/db/: env.py  script.py.mako
src/db/versions/: 2110c1a297_added_model_for_app_admins.py  23806f003e6_add_missing_master_reference_to_the_.py  2b2d619f50e_added_missing_confirmed_column_to_.py  30911189537_added_hidden_field_in_events_table.py  39eb5eb1317_add_missing_testing_and_require_.py  47d48ad28c_initial_migration.py  4d2a46b2275_added_xs_value_to_enum_of_participant_s_.py
src/tests/: helper.py  test_api.py  test_auth_controller.py  test_controller.py  test_model.py  test_rest_controller.py  test_utils.py  test_validation.py
static/css/: admin.css  style-eventlist.css  style.css
static/js/: admin.js  angular-strap.min.js  bootstrap-datepicker.js  contact_form.js  events.js  map.js  participants.js  selectable.js  ui-bootstrap-tpls-0.1.0.min.js
static/templates/admin/: admin.html
static/templates/admin/events/: detail.html  invites.html  list.html  participants.html
static/templates/admin/participants/: detail.html  list.html
