[metadata]
name = GDGUkraine
author = Sviatoslav Sydorenko
author-email = wk+opensource-gdg-ukraine@sydorenko.org.ua
summary = gdg.org.ua web server.
description-file = README.rst
home-page = https://gdg.org.ua
license = MIT
classifier =
    Development Status :: 5 - Stable
    Environment :: Web Environment
    Framework :: CherryPy
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Internet :: WWW/HTTP
    Operating System :: OS Independent
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP
keywords =
    rest
    tool
    events
    gdg

[files]
packages =
    GDGUkraine

[entry_points]
console_scripts =
    load_gdg_fixtures = GDGUkraine.fixtures.loader:main

[aliases]
release = dists upload
dists = clean --all sdist bdist_wheel

[wheel]
universal = 1

[bdist_wheel]
universal = 1
