[metadata]
name = GDGUkraine
version = 1.0.0
url = https://gdg.org.ua
author = Sviatoslav Sydorenko (@webknjaz)
author_email = wk+opensource-gdg-ukraine@sydorenko.org.ua
maintainer = Olexandr Kovalchuk (@anxolerd)
classifier =
    Development Status :: 5 - Stable
    Environment :: Web Environment
    Framework :: CherryPy
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Internet :: WWW/HTTP
    Operating System :: OS Independent
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP
license = MIT
description = gdg.org.ua web server.
long_description = file: README.rst
keywords =
    rest
    tool
    events
    gdg

[options]
setup_requires =
    setuptools_scm>=1.15.0
install_requires =
    CherryPy[routes_dispatcher]==10.1.0
    SQLAlchemy==1.0.11
    yuicompressor==2.4.8
    webassets==0.11.1
    Routes==2.3.1
    WTForms==2.1
    python-social-auth==0.2.13
    alembic==0.8.4
    openpyxl==2.3.2
python_requires = >=3.5
include_package_data = True
packages = GDGUkraine
package_dir =
    '' = src
dependency_links =
    https://cdn.mysql.com/Downloads/Connector-Python/mysql-connector-python-2.0.4.zip#md5=3df394d89300db95163f17c843ef49df
    git+https://github.com/open-craft-guild/blueberrypy.git@d41104c#egg=blueberrypy-0.6.0.dev[speedups]

[options.entry_points]
console_scripts =
    load_gdg_fixtures = GDGUkraine.fixtures.loader:main

[aliases]
release = dists upload
dists = clean --all sdist bdist_wheel

[wheel]
universal = 1

[bdist_wheel]
universal = 1
